syntax = "proto3";
option go_package = "github.com/ohanan/bpg/proto";
package proto;
service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}
message HelloReply {
  string message = 1;
}